--- a/quiz.html
+++ b/quiz.html
@@ -23,9 +23,9 @@
     <script>
       // Replace with your actual config
       const firebaseConfig = {
-        apiKey: "YOUR_API_KEY",
-        authDomain: "YOUR_AUTH_DOMAIN",
-        projectId: "YOUR_PROJECT_ID",
+        apiKey: "AIzaSyCRhKq7k4v2MdiE5xT4H7-Yb7SLQ5mvTn8",
+        authDomain: "quiz-app-1b48b.firebaseapp.com",
+        projectId: "quiz-app-1b48b",
         // ...other config values
       };
       firebase.initializeApp(firebaseConfig);
