--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
   <nav class="navbar-main">
     <div class="container">
       <div class="logo">
-        <img src="assets/logo.png" alt="IR-LDCE Logo"/>
+        <img src="logo.png" alt="IR-LDCE Logo"/>
         <span>IR-LDCE</span>
       </div>
       <ul class="nav-links">
