--- a/index.html
+++ b/index.html
@@ -147,16 +147,22 @@
   <div class="header-top">
     <div class="container">
       <div class="left-group">
+        <span>&nbsp;&nbsp;II&nbsp;&nbsp;</span>
         <a href="index.html">
           <i class="fas fa-home"></i> Home
         </a>
         <span>&nbsp;&nbsp;II&nbsp;&nbsp;</span>
         <a href="https://indianrail.gov.in" target="_blank">Railway Official Website</a>
+        <span>&nbsp;&nbsp;II&nbsp;&nbsp;</span>
       </div>
       <div>
+        <span>&nbsp;&nbsp;II&nbsp;&nbsp;</span>
         <a href="about.html">About Us</a>
+        <span>&nbsp;&nbsp;II&nbsp;&nbsp;</span>
         <a href="register.html">Register</a>
+        <span>&nbsp;&nbsp;II&nbsp;&nbsp;</span>
         <a href="login.html">Login</a>
+        <span>&nbsp;&nbsp;II&nbsp;&nbsp;</span>
       </div>
     </div>
   </div>
