--- a/index.html
+++ b/index.html
@@ -1,12 +1,86 @@
-<div id="include-header"></div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Indian Railway Manuals Quiz</title>
+
+  <!-- Font Awesome for the Home icon -->
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  />
+
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #002147;
+      color: #333;
+      padding: 0;
+    }
+
+    /* Main quiz app container */
+    .app {
+      background: #fff;
+      max-width: 600px;
+      margin: 2rem auto;
+      padding: 2rem;
+      border-radius: 8px;
+      text-align: center;
+    }
+
+    #logoutButton {
+      margin: 0.5rem;
+      padding: 0.75rem 1.5rem;
+      font-size: 1rem;
+      cursor: pointer;
+      border: none;
+      border-radius: 4px;
+      background: #dc3545;
+      color: #fff;
+      display: none;
+    }
+
+    .quiz-list {
+      margin-top: 1.5rem;
+    }
+    .quiz-list button {
+      display: block;
+      width: 100%;
+      text-align: left;
+      background: #f0f0f0;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      padding: 0.75rem;
+      margin-bottom: 0.5rem;
+      cursor: pointer;
+    }
+    .quiz-list button:hover {
+      background: #e0e0e0;
+    }
+
+    #loginPrompt {
+      margin-top: 1rem;
+      font-style: italic;
+      color: #666;
+    }
+  </style>
+</head>
+<body>
+
+  <!-- HEADER WILL BE INJECTED HERE -->
+  <div id="include-header"></div>
+
+  <!-- Your existing quiz app markup -->
   <div class="app">
     <h1>Indian Railway Manuals Quiz</h1>
     <hr class="title-divider">
 
-    <!-- Logout Button (shown if logged in) -->
     <button id="logoutButton">Logout</button>
 
-    <!-- Quiz List (always visible) -->
     <div class="quiz-list" id="quizList">
       <button class="manual-btn" data-manual="irwm">1. Indian Railway Works Manual</button>
       <button class="manual-btn" data-manual="irpwm">2. Indian Railway P-way Manual</button>
@@ -28,8 +102,21 @@
   <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>
   <script>
-    // Firebase config
-    const firebaseConfig = {
+    // --- Header include logic ---
+    async function includeHeader() {
+      try {
+        const resp = await fetch('header.html');
+        if (!resp.ok) throw new Error('Could not load header.html');
+        document.getElementById('include-header').innerHTML = await resp.text();
+      } catch (err) {
+        console.error(err);
+      }
+    }
+    includeHeader();
+
+    // --- Firebase & quiz logic (unchanged) ---
+    const logoutBtn = document.getElementById('logoutButton');
+    firebase.initializeApp({
       apiKey: "AIzaSyCRhKq7k4v2MdiE5xT4H7-Yb7SLQ5mvTn8",
       authDomain: "quiz-app-1b48b.firebaseapp.com",
       projectId: "quiz-app-1b48b",
@@ -37,39 +124,18 @@
       messagingSenderId: "765334603137",
       appId: "1:765334603137:web:1c8a13f6086a6773c2d480",
       measurementId: "G-YQJQWJ12N7"
-    };
-    firebase.initializeApp(firebaseConfig);
-
-    const logoutBtn = document.getElementById('logoutButton');
-
-    // Show/hide logout button based on auth state
+    });
     firebase.auth().onAuthStateChanged(user => {
       logoutBtn.style.display = user ? 'inline-block' : 'none';
     });
-
-    // Logout action
     logoutBtn.addEventListener('click', () => {
       firebase.auth().signOut().then(() => location.reload());
     });
-
-    // Make each manual clickable → redirect to login page
     document.querySelectorAll('.manual-btn').forEach(btn => {
       btn.addEventListener('click', () => {
         window.location.href = 'login.html';
       });
     });
-  <script src="script.js"></script>
-  <script>
-  async function includeHeader() {
-    try {
-      const resp = await fetch('header.html');
-      if (!resp.ok) throw new Error('Header not found');
-      document.getElementById('include-header').innerHTML = await resp.text();
-    } catch (e) {
-      console.error(e);
-    }
-  }
-  includeHeader();
-</script>
+  </script>
 </body>
 </html>
