--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Indian Railway Manuals Quiz</title>
 
-  <!-- Font Awesome for icons -->
+  <!-- Font Awesome for the Home icon -->
   <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -13,19 +13,52 @@
     referrerpolicy="no-referrer"
   />
 
-  <!-- External CSS -->
-  <link rel="stylesheet" href="style.css" />
+  <style>
+    /* Same as before */
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #002147;
+      color: #333;
+      padding: 0;
+    }
+    /* Main quiz app container */
+    .app {
+      background: #fff;
+      max-width: 600px;
+      margin: 2rem auto;
+      padding: 2rem;
+      border-radius: 8px;
+      text-align: center;
+    }
+    /* Manual buttons */
+    .quiz-list button {
+      display: block;
+      width: 100%;
+      text-align: left;
+      background: #f0f0f0;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      padding: 0.75rem;
+      margin-bottom: 0.5rem;
+      cursor: pointer;
+    }
+    .quiz-list button:hover {
+      background: #e0e0e0;
+    }
+  </style>
 </head>
 <body>
 
-  <!-- HEADER INJECTION -->
+  <!-- HEADER WILL BE INJECTED HERE -->
   <div id="include-header"></div>
 
-  <!-- Quiz App -->
+  <!-- Your existing quiz app markup -->
   <div class="app">
     <h1>Indian Railway Manuals Quiz</h1>
+    <hr class="title-divider">
 
-    
+    <button id="logoutButton">Logout</button>
 
     <div class="quiz-list" id="quizList">
       <button class="manual-btn" data-manual="irwm">1. Indian Railway Works Manual</button>
@@ -47,9 +80,8 @@
   <!-- Firebase SDKs -->
   <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js"></script>
-
   <script>
-    // Load header.html dynamically
+    // --- Header include logic ---
     async function includeHeader() {
       try {
         const resp = await fetch('header.html');
@@ -61,18 +93,18 @@
     }
     includeHeader();
 
-    // Firebase config
-    const logoutBtn = document.getElementById('logoutButton');
+    // --- Firebase initialization ---
     firebase.initializeApp({
       apiKey: "AIzaSyCRhKq7k4v2MdiE5xT4H7-Yb7SLQ5mvTn8",
       authDomain: "quiz-app-1b48b.firebaseapp.com",
       projectId: "quiz-app-1b48b",
-      storageBucket: "quiz-app-1b48b.appspot.com",
+      storageBucket: "quiz-app-1b48b.firebasestorage.app",
       messagingSenderId: "765334603137",
       appId: "1:765334603137:web:1c8a13f6086a6773c2d480",
       measurementId: "G-YQJQWJ12N7"
     });
 
+    const logoutBtn = document.getElementById('logoutButton');
     firebase.auth().onAuthStateChanged(user => {
       logoutBtn.style.display = user ? 'inline-block' : 'none';
     });
@@ -81,9 +113,17 @@
       firebase.auth().signOut().then(() => location.reload());
     });
 
+    // Manual buttons - Redirect to login if not logged in
     document.querySelectorAll('.manual-btn').forEach(btn => {
-      btn.addEventListener('click', () => {
-        window.location.href = 'login.html';
+      btn.addEventListener('click', (e) => {
+        const user = firebase.auth().currentUser;
+        if (!user) {
+          // If user is not logged in, redirect to login page
+          window.location.href = 'login.html';
+        } else {
+          // Otherwise, proceed with the manual content
+          window.location.href = `manuals/${btn.dataset.manual}.html`; // Example URL structure for manuals
+        }
       });
     });
   </script>
