--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
   />
 
   <style>
-    /* Same as before */
     body {
       margin: 0;
       font-family: Arial, sans-serif;
@@ -22,7 +21,7 @@
       color: #333;
       padding: 0;
     }
-    /* Main quiz app container */
+
     .app {
       background: #fff;
       max-width: 600px;
@@ -31,7 +30,32 @@
       border-radius: 8px;
       text-align: center;
     }
-    /* Manual buttons */
+
+    h1 {
+      color: #002147;
+    }
+
+    .title-divider {
+      border-top: 2px solid #002147;
+      margin-bottom: 20px;
+    }
+
+    #logoutButton {
+      margin: 1rem 0;
+      padding: 0.75rem 1.5rem;
+      font-size: 1rem;
+      cursor: pointer;
+      border: none;
+      border-radius: 4px;
+      background: #dc3545;
+      color: #fff;
+      display: none;
+    }
+
+    .quiz-list {
+      margin-top: 1.5rem;
+    }
+
     .quiz-list button {
       display: block;
       width: 100%;
@@ -42,9 +66,28 @@
       padding: 0.75rem;
       margin-bottom: 0.5rem;
       cursor: pointer;
+      font-size: 1rem;
     }
+
     .quiz-list button:hover {
       background: #e0e0e0;
+    }
+
+    #loginPrompt {
+      margin-top: 1rem;
+      font-style: italic;
+      color: #666;
+    }
+
+    /* Responsive Styles */
+    @media (max-width: 600px) {
+      .app {
+        width: 90%;
+        padding: 15px;
+      }
+      .quiz-list button {
+        font-size: 0.9rem;
+      }
     }
   </style>
 </head>
@@ -53,12 +96,11 @@
   <!-- HEADER WILL BE INJECTED HERE -->
   <div id="include-header"></div>
 
-  <!-- Your existing quiz app markup -->
   <div class="app">
     <h1>Indian Railway Manuals Quiz</h1>
     <hr class="title-divider">
 
-    <button id="logoutButton">Logout</button>
+    
 
     <div class="quiz-list" id="quizList">
       <button class="manual-btn" data-manual="irwm">1. Indian Railway Works Manual</button>
